# work

./: .gitignore  DeepSeek-Agent-V3-使用说明-0.10.0.docx  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  capability_health.py  cli.py  config.py  console.py  context.py  contracts.py  convergence.py  daemon.py  deepseek.py  event_pipelines.py  events.py  memory.py  memory_pipeline.py  model_router.py  network.py  parallel.py  paths.py  planner.py  project.py  prompt.py  reflection.py  runtime.py  session.py  state.py  task_plan.py  task_queue.py  task_router.py  task_strategy.py  tool_orchestration.py  unicode_text.py  vector.py  workspace_memory.py
docs/: architecture-v0.10.0.md  architecture-v0.9.1.md  implementation.md  v0.11.0-end-to-end-gap-analysis.md
launcher/: agent
scripts/: build_release_docx.py  create_reliability_docx_fixtures.py  mcp_sqlite_server.py  reliability_case_runner.py
tests/: conftest.py  test_browser.py  test_build_release_docx.py  test_cli.py  test_console.py  test_context_package.py  test_context_project.py  test_deepseek.py  test_event_pipelines.py  test_event_state_contracts.py  test_file_edit.py  test_hard_phase_validation.py  test_http.py  test_interface_contracts.py  test_mcp.py  test_mcp_http.py  test_mcp_sse.py  test_memory.py  test_network.py  test_queue_parallel.py  test_reliability_case_runner.py  test_runtime.py  test_runtime_convergence.py  test_runtime_event_migration.py  test_tool_health_events.py  test_tool_orchestration.py  test_tool_result_attachments.py  test_tools.py  test_unicode_text.py  (+4 more)
(+75 files in other folders)
