[project]
name = "deep-agent"
version = "0.11.0"
description = "Local CLI AI agent runtime powered by DeepSeek."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
  "regex>=2024.11.6",
  "wcwidth>=0.2.13",
]

[project.optional-dependencies]
browser = ["playwright>=1.45.0"]
vector = ["chromadb>=0.5.0"]
semantic = ["tree-sitter-language-pack>=1.12.0"]
document = [
  "PyMuPDF>=1.28.0",
  "Pillow>=12.0.0",
  "python-docx>=1.2.0",
  "docling>=2.112.0",
]
dev = ["ruff>=0.6.0", "pytest>=8.0.0", "python-docx>=1.2.0"]

[project.scripts]
agent = "agent.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
